<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never"
        />
    <item
        android:orderInCategory="20"
        android:id="@+id/action_status"
        app:showAsAction="ifRoom"
        android:title="@string/action_status"
        android:icon="@drawable/ic_status_info"/>
    <item
        android:orderInCategory="30"
        android:id="@+id/action_favorites"
        app:showAsAction="ifRoom"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorites"/>
    <item
        android:orderInCategory="10"
        android:id="@+id/action_order"
        app:showAsAction="ifRoom"
        android:title="@string/action_order"
        android:icon="@drawable/ic_shopping_cart"/>
</menu>